--- a/booking.html
+++ b/booking.html
@@ -26,7 +26,7 @@
 <div class="top"><div class="top-r">
 <a href="#" >网站导航</a><span class="tel">免费热线：<span class="telno">021 5228 3509</span></span><a href="#" >收藏本站</a>
 </div>
-用户名：<input name="" type="text" />&nbsp;&nbsp; 密 码：<input name="" type="text" /> <input type="submit" value="登陆"  / class="hbtn"><input type="submit" value="注册" / class="hbtn">
+用户名：<input name="" type="text" />&nbsp;&nbsp; 密 码：<input name="" type="text" /> <input type="submit" value="登陆"/ class="hbtn"><input type="submit" value="注册" / class="hbtn">
 </div>
 
 <div class="logo"><img src="images/logo.gif" /></div>
@@ -38,7 +38,7 @@
   </ul>
   <div class="search">
     <input name="input" type="text" class="input"/>
-   <input type="submit" value="搜索"  / class="headersearch"></div>
+   <input type="submit" value="搜索" / class="headersearch"></div>
    </div>
   <ul class="country_menu">
     <li class="flagus"><a href="#"><span>美国</span></a></li>
@@ -123,7 +123,7 @@
             </ul>
 </div>
 <div class="hottag">
-东方留学：<a href="#">上海<a href="#">广州</a><a href="#">深圳</a> <a href="#">武汉</a><a href="#">长沙</a><a href="#">南京</a><a href="#">济南</a><a href="#">青岛</a><a href="#">厦门</a><a href="#">东三省</a><a href="#">重庆</a><a href="#">西安</a><a href="#">郑州</a><a href="#">杭州</a><a href="#">兰州</a><a href="#">昆明</a>我要读：<a href="#">初中</a><a href="#">高中</a><a href="#">学院</a><a href="#">本科</a><a href="#">硕士</a></div>
+东方留学：<a href="#">上海</a><a href="#">广州</a><a href="#">深圳</a> <a href="#">武汉</a><a href="#">长沙</a><a href="#">南京</a><a href="#">济南</a><a href="#">青岛</a><a href="#">厦门</a><a href="#">东三省</a><a href="#">重庆</a><a href="#">西安</a><a href="#">郑州</a><a href="#">杭州</a><a href="#">兰州</a><a href="#">昆明</a>我要读：<a href="#">初中</a><a href="#">高中</a><a href="#">学院</a><a href="#">本科</a><a href="#">硕士</a></div>
 
 
 
@@ -204,8 +204,8 @@
           </div>
  <div class="onlineform">
           <div style="display:block; overflow:hidden; height: 45px;">
-            <input id="confirm"/ type="submit"  class="confirm" value="确认提交" />
-            <input id="reset"/ type="submit"  class="reset" value="重新填写" />
+            <input id="confirm" type="submit"  class="confirm" value="确认提交" />
+            <input id="reset" type="submit"  class="reset" value="重新填写" />
           </div>
           
         </div>
