--- a/keywords.html
+++ b/keywords.html
@@ -5,11 +5,8 @@
 <title>院校关键字搜索</title>
 <link rel="stylesheet" type="text/css" href="css/keywords-search.css" />
 <link rel="stylesheet" type="text/css" href="css/title.css" />
-<link rel="stylesheet" type="text/css" href="css/gallery.css" />
- <script type='text/javascript' src='js/jquery.min.js'></script>
-    <script type="text/javascript" src="js/tablist.js"></script>
-      <script type="text/javascript" src="js/gallery.js"></script>
-        <script type="text/javascript" src="js/news.js"></script>
+
+
 </head>
 
 <body style="margin:0 auto; padding:0">
@@ -33,7 +30,7 @@
 				</fieldset>
 			</form>
             </div>
-   <SCRIPT language=javascript>function T(n){document.getElementById("ArticleCnt").style.fontSize=n+"px";}</SCRIPT><DIV id=Scroll>
+   <script language=javascript>function T(n){document.getElementById("ArticleCnt").style.fontSize=n+"px";}</script><DIV id=Scroll>
 <DIV id=ScrollMe style="OVERFLOW: hidden; HEIGHT: 27px"><A 
 href="#" target=_blank>瓮安涉案女孩系溺亡</A><BR><A href="#" 
 target=_blank>塔罗占卜王菲会复出</A><BR><A href="#" 
@@ -71,7 +68,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
  
     		
    			  <ul >
-              <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+              <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                    <span class="t2"><a href="#"> <span class="keywords">美国</span>大本德社区学院</a></span><br />
@@ -85,7 +82,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                 </div>
     			</li>
-   			  <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+   			  <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -99,7 +96,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                 </div>
     			</li> 
-    		<li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+    		<li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -113,7 +110,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
               </div>
     			</li>
-                <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+                <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -127,7 +124,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                   </div>
     			</li>
-                <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+                <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -141,7 +138,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                   </div>
     			</li>
-                <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+                <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -155,7 +152,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                   </div>
     			</li>
-                <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+                <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
@@ -169,7 +166,7 @@ target=_blank>塔罗占卜王菲会复出</A><BR></DIV></DIV>
                   </ul>
                   </div>
     			</li>
-                <li class="school_results_list_item"><img src="images/bigbend.jpg"/ class="logocollege" />
+                <li class="school_results_list_item"><img src="images/bigbend.jpg" class="logocollege" />
    			    <div class="school_results_content">
                 <div style="float:right"><span class="t4">关注度:</span><span class="t5">10240</span></div>
                     <span class="t2"><a href="#">美国大本德社区学院</a></span><br />
