--- a/nation.html
+++ b/nation.html
@@ -22,7 +22,7 @@
 </head>
 
 
-<body style="margin:0 auto; padding:0">
+<body >
 <div class="body">
   <!--AD banner-->
 
@@ -42,7 +42,7 @@
   </ul>
   <div class="search">
     <input name="input" type="text" class="input"/>
-   <input type="submit" value="搜索"  / class="headersearch"></div>
+   <input type="submit" value="搜索" class="headersearch"></div>
    </div>
   <ul class="country_menu">
     <li class="flagus"><a href="#"><span>美国</span></a></li>
@@ -127,7 +127,7 @@
             </ul>
 </div>
 <div class="hottag">
-东方留学：<a href="#">上海<a href="#">广州</a><a href="#">深圳</a> <a href="#">武汉</a><a href="#">长沙</a><a href="#">南京</a><a href="#">济南</a><a href="#">青岛</a><a href="#">厦门</a><a href="#">东三省</a><a href="#">重庆</a><a href="#">西安</a><a href="#">郑州</a><a href="#">杭州</a><a href="#">兰州</a><a href="#">昆明</a>我要读：<a href="#">初中</a><a href="#">高中</a><a href="#">学院</a><a href="#">本科</a><a href="#">硕士</a></div>
+东方留学：<a href="#">上海</a><a href="#">广州</a><a href="#">深圳</a> <a href="#">武汉</a><a href="#">长沙</a><a href="#">南京</a><a href="#">济南</a><a href="#">青岛</a><a href="#">厦门</a><a href="#">东三省</a><a href="#">重庆</a><a href="#">西安</a><a href="#">郑州</a><a href="#">杭州</a><a href="#">兰州</a><a href="#">昆明</a>我要读：<a href="#">初中</a><a href="#">高中</a><a href="#">学院</a><a href="#">本科</a><a href="#">硕士</a></div>
 
 
 
@@ -165,10 +165,8 @@
               <dl class="show">
               </dl>
               <dl class="">
-                <dt><a href="#" title="" target="_blank"><img src="images/104-1105231024160-L.jpg" alt="2011城市主题公园亲子游" / height="231"></a></dt>
-                <dd> <a href="#" target="_blank">高考落榜生的留学之路</a><tt>
-
-    你，是别人眼中的高考胜利者，只有你自己知道这个分数的尴尬和不甘，调剂？！复读？！......<a href="#" target="_blank">  详细内容>></a></tt></dd>
+                <dt><a href="#" title="" target="_blank"><img src="images/104-1105231024160-L.jpg" alt="2011城市主题公园亲子游" height="231"></a></dt>
+                <dd> <a href="#" target="_blank">高考落榜生的留学之路</a><tt> 你，是别人眼中的高考胜利者，只有你自己知道这个分数的尴尬和不甘，调剂？！复读？！......<a href="#" target="_blank">  详细内容>></a></tt></dd>
               </dl>
               <dl class="">
                 <dt><a href="#" title="" target="_blank"><img src="images/118-11060P950590-L.png" alt="潜入城市周边清幽之地" /></a></dt>
@@ -293,44 +291,44 @@
                <div id="aboard-v">
                  <ul>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                  </ul>
                </div>
                <div id="exam-v">
                  <ul>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                    <li ><span class="listname"><a href="#">美国阿德菲大学</a></span>
-                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0"/ height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
+                     <div style="display:block; margin: 0 17px;"><a href="#"><img src="images/9459_6_s_1.jpg" border="0" height="90" width="90" style="padding:1px; border:1px solid #CCC" /></a></div>
                    </li>
                  </ul>
                </div>
@@ -346,21 +344,21 @@
           <div class="t315" >
             <div style="float:left">
               <div class="tr">专家顾问</div>
-              <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+              <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
             <div class="more"><a href="#">更多</a></div>
           </div>
           <div class="nation-special">
             <ul>
-              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" / style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
+              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
                 <div class="nation-aulist"><span class="nation-tau"><a href="http://blog.liuxue360.com/fengyanfei/" target="_blank" > 凤燕飞老师</a> 金牌咨询顾问专家</span>新加坡教育联盟首席留学顾问，毕业于新加坡英华美学院荣获英加坡英华美学院荣获英...<br />
 <img src="images/pa.gif" border="0" /></div>
               </li>
-              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" / style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
+              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
                 <div class="nation-aulist"><span class="nation-tau"><a href="http://blog.liuxue360.com/fengyanfei/" target="_blank" > 凤燕飞老师</a> 金牌咨询顾问专家</span>新加坡教育联盟首席留学顾问，毕业于新加坡英华美学院荣获英加坡英华美学院荣获英...<br />
                   <img src="images/pa.gif" border="0" /></div>
               </li></ul>
             <ul>
-              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" / style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
+              <li><img src="images/94148_6_s_1.jpg" width="90" height="90" style="border:0; float:left; padding-right:5px; display: block; padding-bottom: 5px;" />
                 <div class="nation-aulist"><span class="nation-tau"><a href="http://blog.liuxue360.com/fengyanfei/" target="_blank" > 凤燕飞老师</a> 金牌咨询顾问专家</span>新加坡教育联盟首席留学顾问，毕业于新加坡英华美学院荣获英加坡英华美学院荣获英...<br />
                   <img src="images/pa.gif" border="0" /></div>
               </li>
@@ -371,7 +369,7 @@
            <div class="t315" >
              <div style="float:left">
                <div class="tr">学院博文</div>
-               <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+               <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
              <div class="more"><a href="#">更多</a></div>
            </div>
            <div style="margin:0 6px">
@@ -435,34 +433,34 @@
              <div class="more"><a href="#">更多</a></div>
              <div style="float:left">
                <div class="tr">推荐院校</div>
-               <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+               <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
            </div>
            <div class="recommond-school">
           
                <ul>
-                 <li ><div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div><span class="listname"><a href="#">美国阿德菲大学</a></span>
+                 <li ><div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div><span class="listname"><a href="#">美国阿德菲大学</a></span>
                    
                  </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                  <li >
-                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0"/ height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
+                   <div style="display:block; margin: 0 auto;"><a href="#"><img src="images/211133_4_150_58.jpg" border="0" height="58" width="150" style="padding:1px; border:1px solid #CCC" /></a></div>
                    <span class="listname"><a href="#">美国阿德菲大学</a></span> </li>
                </ul>
            </div>
@@ -471,8 +469,7 @@
          <div class="container710">
            <div class="t715" >
              <div class="more"><a href="#">更多</a></div>
-             <div class="t-question"> 专家答疑</div><div style="float:left; padding-top:6px"><img src="images/iq.gif"/ border="0" / ></div>
-           </div>
+             <div class="t-question"> 专家答疑</div><div style="float:left; padding-top:6px"><img src="images/iq.gif" border="0"></div>           </div>
            <div style="margin:0 6px"><ul>
              <li class="qa"><div class="qat"><a href="#">留学美国文理学院——贵族式的精英...</a></div>
              <div class="qaa"><a href="#">留学美国</a></div>
@@ -514,7 +511,7 @@
     <div class="t280" >
       <div style="float:left">
         <div class="tr">顾问博文</div>
-        <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+        <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
       <div class="more"><a href="#">更多</a></div>
     </div>
     <div style="margin:0 6px">
@@ -536,7 +533,7 @@
     <div class="t280" >
       <div style="float:left">
         <div class="tr">美国留学流程</div>
-        <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+        <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
       <div class="more"><a href="#">更多</a></div>
     </div>
     <div class="liucheng" >
@@ -554,7 +551,7 @@
       <div class="more"><a href="#">更多</a></div>
       <div style="float:left">
         <div class="tr">院校博客排行</div>
-        <span style="float:left;"><img src="images/tarrow.gif" height="32"/ border="0" style="  padding: 0; margin: 0;" /></span></div>
+        <span style="float:left;"><img src="images/tarrow.gif" height="32" border="0" style="  padding: 0; margin: 0;" /></span></div>
     </div>
     <div style="margin:0 6px;">
       <ul >
@@ -576,7 +573,7 @@
       <div class="more"><a href="#">更多</a></div>
       <div style="float:left">
         <div class="tr">顾问博客排行</div>
-        <span style="float:left;"><img src="images/tarrow.gif" height="32"/ border="0" style="  padding: 0; margin: 0;" /></span></div>
+        <span style="float:left;"><img src="images/tarrow.gif" height="32" border="0" style="  padding: 0; margin: 0;" /></span></div>
     </div>
     <div style="margin:0 6px;">
       <ul >
@@ -598,7 +595,7 @@
        <div class="t1010" >
          <div style="float:left">
            <div class="tr">院校图库</div>
-           <img src="images/tarrow.gif" height="32"/ border="0" style=" float:left; padding: 0; margin: 0;" /></div>
+           <img src="images/tarrow.gif" height="32" border="0" style=" float:left; padding: 0; margin: 0;" /></div>
          <div class="more"><a href="#">更多</a></div>
        </div>
        <div class="gallery"> <img onmousedown="ISL_GoDown()" onmouseup="ISL_StopDown()" onmouseout="ISL_StopDown()" style="float:left; margin-top:40px" src="images/shqm_left_pic.gif" width="12" height="31" /><img  onmousedown="ISL_GoUp()" onmouseup="ISL_StopUp()" onmouseout="ISL_StopUp()"  style=" float:right; margin-top:40px" src="images/shqm_right_pic.gif" width="12" height="31" />
